--- a/jscan/package.json
+++ b/jscan/package.json
@@ -22,6 +22,7 @@
     "koa": "^2.15.3",
     "koa-json": "^2.0.2",
     "koa-router": "^12.0.1",
+    "markdown-it": "^14.1.0",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
     "web3": "^4.12.1"
